--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>2°a cesb</title>
     <link rel="atylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem"src"2a.png" alt="site 2°A">
+        <img class="cabecalho-imagem"src= "adicione uma imagem" alt="img icon">
         <ul class="cabecalho-lista">
-            <li class="cabecalho
+            <li class="cabecalho-itens">projetos</li>
+            <li class="cabecalho-itens">alunos</li>
+            <li class="cabecalho-itens">quem somos?</li>
+        </ul>
+    </header>        
 </body>
 </html>
