--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
             <li class="cabecalho-itens">alunos</li>
             <li class="cabecalho-itens">quem somos?</li>
         </ul>
-    </header>        
+    </header>
+    
+    <section class="cesb">
+        <h2 class="alunos-cesb">Alunos CESB</h2>
+        <p class="texto-cesb">Aqui podemos encontrar todos os projetos desenvolvidos pelos alunos dos 2°a
+        <p  class="texto-cesb">No decorer deste ano vamos desenvolver varios projetos de progamação 
+            espaço para compartilhar nosso resultado.</p>
+    </section>
+    <section  class="alunos">
+        <div class="div-alunos">
+            <h2 class="div-alunos">Oa nosso alunos</h2>
+            <img class="imagem-alunos" src="curso-de-programacao.jpg" alt="imagem Alunos">
+            <h5 class="legenda-alunos">alunos de curso de programação do cesb.</h3>
+        </div>
+    </section>                             
 </body>
+
 </html>
